Fix many yellow flags